# containerize-examples

./: .gitignore  README.md  README.md.jinja2
.github/workflows/: test-and-push-result.yaml
dotnetcore/: Dockerfile  docker-compose.yml
dotnetcore-chiseled/: Dockerfile
dotnetcore-chiseled/TodoApi/: Program.cs
dotnetcore-chiseled/TodoApi/Controllers/: TodosController.cs
dotnetcore-chiseled/TodoApi/Data/: TodoDbContext.cs
dotnetcore-chiseled/TodoApi/Migrations/: 20250422202511_Initial.Designer.cs  20250422202511_Initial.cs  TodoDbContextModelSnapshot.cs
dotnetcore-chiseled/TodoApi/Properties/: launchSettings.json
dotnetcore/TodoApi/: Program.cs  TodoApi.csproj
dotnetcore/TodoApi/Models/: Todo.cs
python-pip/: Dockerfile  docker-compose.yml  requirements.txt
python-pip-debian/: Dockerfile
python-pip-debian-slim/: Dockerfile
python-pip-debian/src/: main.py
python-pip/src/: main.py
python-poetry/: Dockerfile  docker-compose.yml  pyproject.toml
results-aggregator/: generate_results.py  initialize_database.py  main.py  models.py  pyproject.toml
tests/: test_api.py
