[tool.poetry]
name = "python-poetry"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
psycopg = "^3.2.6"
psycopg-binary = "^3.2.6"
sqlmodel = "^0.0.24"
testcontainers = "^4.10.0"
alembic = "^1.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
